# AgentGate

./: .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  action.yml  dashboard.html  index.md  insights_agent_report.html  insights_agent_report.json  insights_agent_report.sarif  pyproject.toml  railway_discovered_manifest.yaml  todo.md
.github/workflows/: ci.yml
benchmarks/: promptshop_demo_suite.yaml
demo_agents/: PROMPTSHOP_DEMO.md  run_demo.sh  run_mem0_demo.sh  run_promptshop_demo.sh
demo_agents/clean_support_agent/: trust_manifest.yaml
demo_agents/runtime_only_stealth_agent/: agent.py  server.py  trust_manifest.yaml
demo_agents/stealth_exfil_agent/: agent.py  server.py  trust_manifest.yaml
demo_agents/trojanized_support_agent/: agent.py  server.py  trust_manifest.yaml
docs/: ci_integration.md  owasp_coverage.md  promptshop_engineering_brief.md  promptshop_founder_memo.md  trust_benchmarking.md
examples/: github-action-workflow.yml
reports/: agent_service_toolkit_-_chatbot_report.html  agent_service_toolkit_-_chatbot_report.json
research/: adversarial_agent_systems.md  agent_security_testing.md  agentscoringbestpractices.md  competitive_analysis.md  multi_turn_attacks.md  phase2_trust_scan_industry_research.md
scripts/: benchmark_trust_scan.py
src/agentgate/: __init__.py  __main__.py  api.py  ci.py  cli.py  config.py  progress.py  scanner.py
src/agentscorer/: __init__.py  __main__.py  (+3 more)
tests/: conftest.py  test_progress.py
trust_scan_output/: trust_scan_report.html  trust_scan_report.json  trust_scan_report.sarif
(+295 files in other folders)
